# kpisearch

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: kpis.parquet
kpisearch/: __init__.py  admin_config.py  app.py  auth.py  download_kpis.py  search.py  sync.py
kpisearch/static/: admin.html  index.html
